# CG_Praktikum_2

./: .gitignore  CMakeLists.txt  README.md
Aufgabe1_Planetary_system/: CMakeLists.txt  main.cpp  planetary_system.cpp  planetary_system.h
Aufgabe1_Planetary_system/MainWindow/: mainWindow.cpp  mainWindow.h  mainWindow.ui
Aufgabe1_Planetary_system/SettingWidget/: settingWidget.cpp  settingWidget.h  settingWidget.ui
